zg 17.11.2016 11:48:08 +0200 - build 4842

1. 0003352: CtrlC сбрасывает состояние "неизменённый текст".

zg 16.11.2016 14:48:22 +0200 - build 4841

1. таскание диалога мышью и клавиатурой разделены.

svs 15.11.2016 11:18:33 +0300 - build

1. Добавка в файлы Помоши про команды "far:config" и "far:about"

drkns 15.11.2016 07:32:16 +0200 - build 4840

1. Убран workaround, добавленный в 4835 - исправлено в библиотеке.

zg 13.11.2016 23:24:26 +0200 - build 4839

1. уточнение 4838 для меню.

zg 13.11.2016 20:44:50 +0200 - build 4838

1. убран прямой опрос ввода при перетаскивании диалога.

drkns 13.11.2016 18:38:58 +0200 - build 4837

1. Уточнение 4834.

drkns 13.11.2016 14:47:30 +0200 - build 4836

1. 0003348: Far(build 4834) Trap on show folder/file attribute dialog

drkns 13.11.2016 14:17:47 +0200 - build 4835

1. gcc версия не запускалась в пещерных ОС.

drkns 12.11.2016 13:07:03 +0200 - build 4834

1. Вместо FormatString, FormatScreen, str_printf, ostringstream и прочего зоопарка используется fmtlib.
   Изменений много, возможны чудеса.

2. Прочий рефакторинг на эту же тему.

svs 08.11.2016 08:10:59 +0300 - build 4833

1. SQLite 3.15.1

drkns 04.11.2016 00:29:33 +0200 - build 4832

1. Уточнение 4831.

zg 31.10.2016 20:55:32 +0200 - build 4831

1. 0003337: Не восстанавливается заголовок консоли, начиная c 4809.

drkns 21.10.2016 00:55:50 +0200 - build 4830

1. Coverity warnings.

2. Пара мелочей.

shmuel 20.10.2016 19:36:54 +0200 - build 4829

1. M#3275: Allow plugins to load and edit unsaved macro
   Макробраузер при нажатии F4/AltF4 на несохранённом клавиатурном макросе вызывает фаровский диалог "Macro settings".

drkns 20.10.2016 01:41:37 +0200 - build 4828

1. Очередные танцы вокруг Maximise/Restore и Alt+F9.

svs 17.10.2016 11:50:09 +0300 - build 4827

1. SQLite 3.15.0

drkns 15.10.2016 14:32:31 +0200 - build 4826

1. С форума: иногда при уменьшении размеров консоли во внутренний буфер попадал мусор.
