@@ -39,4 +39,7 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 /* $ 07.12.2000 SVS
    + Версия берется из файла farversion.inc
 */
+const VersionInfo FAR_VERSION
+{
 #include "bootstrap/farversion.inc"
+};
