@@ -1,2 +1,2 @@
-﻿m4_include(`farversion.m4')m4_dnl
-const VersionInfo FAR_VERSION=m4_format(`{%d,%d,%d,%d};',MAJOR,MINOR,REVISION,BUILD)
+m4_include(`farversion.m4')m4_dnl
+m4_format(`%d,%d,%d,%d',MAJOR,MINOR,REVISION,BUILD)
