@@ -1,7 +1,7 @@
 @echo off
 setlocal
 
-for /f "tokens=1-3" %%i in ('tools\m4 -P svn_tag_build.m4') do (
+for /f "tokens=1,2,4 delims=," %%i in ('tools\m4 -P farversion.inc.m4') do (
 	set major=%%i
 	set minor=%%j
 	set build=%%k
