@@ -1,2 +1,0 @@
-m4_include(`farversion.m4')m4_dnl
-m4_esyscmd(`echo 'MAJOR` 'MINOR` 'BUILD)m4_dnl
