@@ -1,3 +1,11 @@
+drkns 18.11.2016 17:53:42 +0200 - build 4843
+
+1. Уточнение выравнивания строк по правому краю в элементах интерфейса.
+
+2. Coverity warnings.
+
+3. Рефакторинг.
+
 zg 17.11.2016 11:48:08 +0200 - build 4842
 
 1. 0003352: CtrlC сбрасывает состояние "неизменённый текст".
